--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <title>Silver House</title>
-    <link rel = "stylesheet" href = "/styles/style.css">
+    <link rel = "stylesheet" href = "styles/style.css">
 </head>
 <body>
     <header>
@@ -42,7 +42,7 @@
     <footer>
         <div class = "footer">
             <div class = "footer__logo">
-                <img src = "/images/footer_logo.png" alt = "Логотип">
+                <img src = "images/footer_logo.png" alt = "Логотип">
             </div>
             <div class = "footer__info">
                 <p>Единый кол-центр (круглосуточно)</p>
